--- a/termini.html
+++ b/termini.html
@@ -511,95 +511,81 @@ footer i {
       
 /* Base tooltip container */
 .tooltip-container {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
-/* Base tooltip style */
-.tooltip-container::after {
-    content: "Questo link si apre in una nuova finestra";
-    position: absolute;
-    background-color: white;
-    color: #666;
-    padding: 4px 12px;
-    line-height: 1.3;
-    border-radius: 4px;
-    font-size: 13px;
-    font-style: italic;
-    white-space: nowrap;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    pointer-events: none;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    border: 1px solid #ddd;
-    z-index: 100000;
-}
-
-/* Show tooltip on hover */
-.tooltip-container:hover::after {
-    visibility: visible;
-    opacity: 1;
+/* Roma logo tooltip */
+.top-banner > .tooltip-container::after {
+  content: "Questo link si apre in una nuova finestra";
+  position: absolute;
+  background-color: white;
+  color: #666;
+  padding: 4px 12px;
+  border-radius: 4px;
+  font-size: 13px;
+  font-style: italic;
+  white-space: nowrap;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  border: 1px solid #ddd;
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100000;
+  height: 24px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
 }
 
 /* Social icons tooltips */
-.social-icons .tooltip-container::after {
-    bottom: -40px;
-    left: -150% !important;  /* Spostato molto più a sinistra */
-    transform: translateX(-50%);
-    top: auto;
-    background-color: white !important;
+.social-icons a {
+  position: relative;
 }
 
-
-/* Specific targeting for Roma logo tooltip */
-.top-banner > a.tooltip-container::after {
-    bottom: -40px !important;
-    top: auto !important;
-    left: 85% !important;
-    transform: translateX(-50%) !important;
-    position: absolute !important;
-    background-color: white !important;
-    height: 24px !important;
-    line-height: 1 !important;
-    display: flex !important;
-    align-items: center !important;
-}
-
-/* Top banner positioning */
-.top-banner {
-    position: relative;
-    z-index: 1;
-}
-
-/* Stile tooltip aggiornato */
-.tooltip-container::before {
+.social-icons a::after {
   content: attr(aria-label);
   position: absolute;
-  background: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 4px 8px;
+  background-color: white;
+  color: #666;
+  padding: 4px 12px;
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 13px;
+  font-style: italic;
   white-space: nowrap;
-  opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s;
-  left: -100%; /* Valore ottimizzato per il posizionamento */
-  transform: translateY(-100%);
-  top: -10px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  border: 1px solid #ddd;
+  bottom: -40px;
+  left: -150%;
+  transform: translateX(-50%);
+  z-index: 100000;
 }
 
-/* Mostra tooltip su hover */
-.tooltip-container:hover::before {
-  opacity: 1;
+/* Show tooltips on hover */
+.tooltip-container:hover::after,
+.social-icons a:hover::after {
   visibility: visible;
+  opacity: 1;
 }
 
-/* Aggiustamenti specifici per X e YouTube */
-.tooltip-container:nth-child(3)::before,
-.tooltip-container:nth-child(4)::before {
-  left: -120%; /* Sposta più a sinistra per X e YouTube */
+/* X and YouTube specific adjustment */
+.social-icons a:nth-child(3)::after,
+.social-icons a:nth-child(4)::after {
+  left: -200%;
+}
+
+/* Top banner z-index */
+.top-banner {
+  position: relative;
+  z-index: 1;
 }
 
       
