--- a/termini.html
+++ b/termini.html
@@ -545,36 +545,7 @@ footer i {
 .tooltip-container {
     position: relative;
     display: inline-block;
-    text-decoration: none; /* Rimuove la sottolineatura */
 }
-
-
-.tooltip-container .tooltip {
-    position: absolute;
-    bottom: 120%; /* Posiziona sopra il testo */
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #fff; /* Sfondo bianco */
-    color: #333; /* Testo grigio */
-    padding: 0.5rem 1rem; /* Padding per la tooltip */
-    border-radius: 8px; /* Angoli arrotondati */
-    font-size: 0.8rem; /* Dimensione testo */
-    white-space: nowrap; /* Impedisce il testo su più righe */
-    border: 1px solid #ddd; /* Bordo sottile */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Ombra per profondità */
-    opacity: 0; /* Nasconde inizialmente la tooltip */
-    visibility: hidden; /* Nasconde inizialmente la tooltip */
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    z-index: 10; /* Porta la tooltip sopra gli altri elementi */
-}
-
-.tooltip-container:hover .tooltip {
-    opacity: 1; /* Mostra la tooltip */
-    visibility: visible; /* Rende visibile la tooltip */
-}
-
-
-      
 
 /* Base tooltip style */
 .tooltip-container::after {
@@ -686,12 +657,9 @@ footer i {
        title="Visualizza la posizione sulla mappa">
         <img src="location.svg" alt="Location">
     </a>
-             
-   <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" class="tooltip-container">
-    Biblioteca Elsa Morante
-    <span class="tooltip">Clicca qui per vedere gli appuntamenti della biblioteca</span>
-</a>
-
+    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">
+        Biblioteca Elsa Morante
+    </a>
 </div>
 
 
