--- a/termini.html
+++ b/termini.html
@@ -620,7 +620,10 @@ footer i {
     position: relative;
     z-index: 1;
 }
-      
+
+footer img {
+  pointer-events: none;
+}
       
    </style>
 </head>
