--- a/termini.html
+++ b/termini.html
@@ -621,9 +621,10 @@ footer i {
     z-index: 1;
 }
 
-footer img {
-  pointer-events: none;
+footer a img {
+    pointer-events: none;
 }
+
       
    </style>
 </head>
