--- a/termini.html
+++ b/termini.html
@@ -800,9 +800,9 @@ footer i {
    <footer>
     <div class="container mx-auto px-4">
         <!-- Logo -->
-        <a href="#" onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank'); return false;" rel="noopener noreferrer">
-    <img src="footermorante.png" alt="Logo Biblioteca Morante">
-</a>
+       <img src="footermorante.png" alt="Logo Biblioteca Morante" style="cursor: pointer;" 
+    onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
+
 
         
         <!-- Informazioni -->
