--- a/raccolta.html
+++ b/raccolta.html
@@ -338,7 +338,10 @@
     z-index: 1;
 }
 
-
+/* Cambia il colore del testo al passaggio del mouse */
+    a:hover {
+        color: #b73a49; /* Un colore leggermente più chiaro */
+    }
 
 
 
@@ -411,11 +414,14 @@
            title="Visualizza la posizione sulla mappa">
             <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
         </a>
+
+          
 <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-           class="text-xl hover:underline" 
-           style="color: #970a2c; font-size: 1rem;">
-            Biblioteca Elsa Morante
-        </a> 
+   class="text-xl" 
+   style="color: #970a2c; font-size: 1rem; transition: color 0.3s ease;"
+   title="Clicca qui per vedere gli appuntamenti della biblioteca">
+    Biblioteca Elsa Morante
+</a>
       </div>
 
         
