--- a/raccolta.html
+++ b/raccolta.html
@@ -486,9 +486,9 @@
 
 
     
-<footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
+  <footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
     <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
-         <div class="mb-4 md:mb-0">
+        <div class="mb-4 md:mb-0">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" rel="noopener noreferrer">
                 <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10">
             </a>
@@ -512,26 +512,13 @@
                     <i class="fas fa-clock w-4"></i>
                     <span class="flex flex-col">
                         <span>Lunedì-Venerdì 09:00-18:30</span>
-                        <span>
-            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" id="scrollToOrari">Vai agli orari</a>
-                        </span>
+                        <span>Sabato 09:00-13:00</span>
                     </span>
                 </div>
             </div>
         </div>
     </div>
 </footer>
-
-<!-- Aggiungi lo script per lo scrolling personalizzato -->
-<script>
-    // Aggiungi uno script per lo scrolling solo se la pagina contiene l'ancora 'where_openings'
-    window.onload = function() {
-        if (window.location.hash === "#where_openings") {
-            window.scrollBy(0, 500);  // Scorre di 500px verso il basso per evidenziare la sezione
-        }
-    };
-</script>
-
 
 
 
