--- a/raccolta.html
+++ b/raccolta.html
@@ -346,7 +346,9 @@
         color: #b73a49; /* Un colore leggermente più chiaro */
     }
 
-
+.text-xl:hover {
+  color: #c73d5d;
+}
 
         
     </style>
