--- a/termini.html
+++ b/termini.html
@@ -680,10 +680,10 @@ footer i {
    class="tooltip-library" 
    style="color: #970a2c; font-size: 1rem; transition: color 0.3s ease;" 
    onmouseover="this.style.color='#b13c56'" 
-   onmouseout="this.style.color='#970a2c'" 
-   title="Clicca qui per vedere gli appuntamenti della biblioteca">
+   onmouseout="this.style.color='#970a2c'">
     Biblioteca Elsa Morante
 </a>
+
 
 </div>
 
