--- a/termini.html
+++ b/termini.html
@@ -674,15 +674,8 @@ footer i {
   <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank">
     <img src="location.svg" alt="Location">
   </a>
-   
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-   target="_blank" 
-   class="tooltip-library" 
-   style="color: #970a2c; font-size: 1rem; transition: color 0.3s ease;" 
-   onmouseover="this.style.color='#b13c56'" 
-   onmouseout="this.style.color='#970a2c'">
-    Biblioteca Elsa Morante
-</a>
+  <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" class="tooltip-library"> Biblioteca Elsa Morante </a>
+</div>
 
 
 </div>
