--- a/termini.html
+++ b/termini.html
@@ -621,6 +621,9 @@ footer i {
     z-index: 1;
 }
 
+.tooltip-library:hover {
+    color: #c21d47; /* Un rosso più chiaro */
+}
 
       
    </style>
