--- a/termini.html
+++ b/termini.html
@@ -622,8 +622,9 @@ footer i {
 }
 
 .tooltip-library:hover {
-    color: #c21d47; /* Un rosso più chiaro */
+    color: #d64f70; /* Un rosso più chiaro */
 }
+
 
       
    </style>
