--- a/raccolta.html
+++ b/raccolta.html
@@ -486,9 +486,11 @@
     <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
         <div class="mb-4 md:mb-0">
             
-            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" rel="noopener noreferrer" class="no-tooltip">
-    <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10">
-</a>
+            <!-- Logo con onclick -->
+<img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10" 
+     style="cursor: pointer;" 
+     onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
+
 
         </div>
         
