--- a/raccolta.html
+++ b/raccolta.html
@@ -203,11 +203,13 @@ footer a {
 }
 
 .social-icons .tooltip-container::after {
-    bottom: -40px;
+    bottom: -30px; /* Reduced from -40px */
     left: -150% !important;
     transform: translateX(-50%);
     top: auto;
     background-color: white !important;
+    padding: 2px 8px; /* Reduced padding */
+    font-size: 12px; /* Slightly smaller font */
 }
 
 .top-banner > a.tooltip-container::after {
