--- a/index.html
+++ b/index.html
@@ -482,68 +482,47 @@ document.head.appendChild(style);
 
 
 
-/* Base tooltip container */
+/* Common tooltip container style */
 .tooltip-container {
     position: relative;
     display: inline-block;
 }
 
-/* Base tooltip style */
-.tooltip-container::after {
-  content: "Roma Capitale";
-  position: absolute;
-  left: 50%;
-  top: 100%;
-  transform: translateX(-50%);
-  padding: 4px 8px;
-  background: rgba(0, 0, 0, 0.8);
-  color: white;
-  border-radius: 4px;
-  font-size: 14px;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.2s, visibility 0.2s;
-  white-space: nowrap;
-  margin-top: 5px;
+/* Social icons tooltip */
+.social-icons .tooltip-container::after {
+    content: "Questo link si apre in una nuova finestra";
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: white;
+    color: #666;
+    padding: 4px 12px;
+    line-height: 1.3;
+    border-radius: 4px;
+    font-size: 13px;
+    font-style: italic;
+    white-space: nowrap;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    border: 1px solid #ddd;
+    z-index: 100000;
 }
 
-/* Show tooltip on hover */
+/* Roma logo tooltip */
+.top-banner > .tooltip-container::after {
+    left: 50%;
+    top: 100%;
+    transform: translateX(-50%);
+    margin-top: 5px;
+}
+
 .tooltip-container:hover::after {
     visibility: visible;
     opacity: 1;
-}
-
-/* Social icons tooltips */
-.social-icons .tooltip-container::after {
-    bottom: -40px;
-    left: -150% !important;  /* Spostato molto più a sinistra */
-    transform: translateX(-50%);
-    top: auto;
-    background-color: white !important;
-}
-
-/* Specific targeting for Roma logo tooltip */
-.top-banner > a.tooltip-container::after {
-    bottom: -40px !important;
-    top: auto !important;
-    left: 85% !important;
-    transform: translateX(-50%) !important;
-    position: absolute !important;
-    background-color: white !important;
-    height: 24px !important;
-    line-height: 1 !important;
-    display: flex !important;
-    align-items: center !important;
-}
-
-/* Top banner positioning */
-.top-banner {
-    position: relative;
-    z-index: 1;
-}
-
-.tooltip-library:hover {
-    color: #d64f70; /* Un rosso più chiaro */
 }
 	    
 	    
