--- a/index.html
+++ b/index.html
@@ -482,15 +482,17 @@ document.head.appendChild(style);
 
 
 
+/* Base tooltip container */
 .tooltip-container {
     position: relative;
     display: inline-block;
 }
 
+/* Base tooltip style */
 .tooltip-container::before {
     content: "Questo link si apre in una nuova finestra";
     position: absolute;
-    bottom: calc(100% + 10px);
+    bottom: 100%;
     left: 50%;
     transform: translateX(-50%);
     padding: 5px 10px;
@@ -505,26 +507,29 @@ document.head.appendChild(style);
     z-index: 1000;
 }
 
-.tooltip-container::after {
-    content: '';
-    position: absolute;
-    bottom: calc(100% + 5px);
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 5px;
-    border-style: solid;
-    border-color: rgba(0, 0, 0, 0.8) transparent transparent transparent;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.2s;
-}
-
-.tooltip-container:hover::before,
-.tooltip-container:hover::after {
-    opacity: 1;
+/* Show tooltip on hover */
+.tooltip-container:hover::before {
     visibility: visible;
+    opacity: 1;
 }
 
+/* Social icons tooltips */
+.social-icons .tooltip-container::before {
+    bottom: -40px;
+    background-color: white;
+    color: black;
+    border: 1px solid #ddd;
+}
+
+/* Specific targeting for Roma logo tooltip */
+.top-banner > a.tooltip-container::before {
+    bottom: -40px;
+    background-color: white;
+    color: black;
+    border: 1px solid #ddd;
+}
+
+/* Top banner positioning */
 .top-banner {
     position: relative;
     z-index: 1;
