--- a/index.html
+++ b/index.html
@@ -524,9 +524,13 @@ document.head.appendChild(style);
 /* Specific targeting for Roma logo tooltip */
 .top-banner > a.tooltip-container::before {
     bottom: -40px;
+    left: 0;
+    transform: translateX(0);
     background-color: white;
     color: black;
     border: 1px solid #ddd;
+    white-space: nowrap;
+    width: max-content;
 }
 
 /* Top banner positioning */
