--- a/index.html
+++ b/index.html
@@ -516,9 +516,12 @@ document.head.appendChild(style);
 /* Social icons tooltips */
 .social-icons .tooltip-container::before {
     bottom: -40px;
+    left: -200%; /* Increased left offset */
     background-color: white;
     color: black;
     border: 1px solid #ddd;
+    white-space: nowrap;
+    width: max-content;
 }
 
 /* Specific targeting for Roma logo tooltip */
