--- a/index.html
+++ b/index.html
@@ -549,7 +549,26 @@ document.head.appendChild(style);
     z-index: 1;
 }
 
-	    
+
+
+
+.biblioteca-link {
+    color: #970a2c;
+    transition: color 0.3s;
+    position: relative;
+}
+
+.biblioteca-link:hover::before {
+    content: "Clicca qui per vedere gli appuntamenti della biblioteca";
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    background: white;
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+    white-space: nowrap;
+    z-index: 1000;
+}
 	    
     </style>
 
@@ -665,9 +684,11 @@ document.addEventListener('DOMContentLoaded', () => {
                        title="Visualizza la posizione sulla mappa">
                         <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
                     </a>
-                    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">
-                       Biblioteca Elsa Morante
-                    </a>
+                   <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+   target="_blank"
+   class="biblioteca-link">
+   Biblioteca Elsa Morante
+</a>
 
                 </div>
                 <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-left">
