--- a/index.html
+++ b/index.html
@@ -561,16 +561,16 @@ document.head.appendChild(style);
 .biblioteca-link:hover::before {
     content: "Clicca qui per vedere gli appuntamenti della biblioteca";
     position: absolute;
-    top: -40px; /* Cambiato da bottom a top per farla apparire sopra */
+    top: -40px; /* Tooltip sopra il link */
     left: 0;
     background: white;
     border: 1px solid #ddd;
-    padding: 5px 10px;
+    padding: 3px 10px; /* Ridotto il padding per ridurre l'altezza */
     white-space: nowrap;
     z-index: 1000;
-    color: grey; /* Impostato il colore grigio */
-    
+    color: grey; /* Colore grigio del testo */
 }
+
 
 	    
     </style>
