--- a/index.html
+++ b/index.html
@@ -565,11 +565,12 @@ document.head.appendChild(style);
     left: 0;
     background: white;
     border: 1px solid #ddd;
-    padding: 3px 10px; /* Ridotto il padding per ridurre l'altezza */
+    padding: 2px 10px; /* Ulteriore riduzione del padding verticale */
     white-space: nowrap;
     z-index: 1000;
     color: grey; /* Colore grigio del testo */
 }
+
 
 
 	    
