--- a/index.html
+++ b/index.html
@@ -565,11 +565,13 @@ document.head.appendChild(style);
     left: 0;
     background: white;
     border: 1px solid #ddd;
-    padding: 2px 10px; /* Ulteriore riduzione del padding verticale */
+    padding: 2px 10px; /* Padding ridotto per altezza più contenuta */
     white-space: nowrap;
     z-index: 1000;
     color: grey; /* Colore grigio del testo */
+    font-size: 12px; /* Testo leggermente ridotto */
 }
+
 
 
 
