--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@ document.head.appendChild(style);
     width: max-content;
     padding: 3px 8px; /* Ridotto il padding per una tooltip più compatta */
     font-size: 12px; /* Font più piccolo per una tooltip più snella */
+    font-style: italic; /* Impostato il testo in corsivo */
 }
 
 
@@ -539,6 +540,7 @@ document.head.appendChild(style);
     width: max-content;
     padding: 5px 10px; /* Aumentato il padding per maggiore altezza */
     font-size: 14px; /* Aumentato il font per aumentare l'altezza */
+    font-style: italic; /* Impostato il testo in corsivo */
 }
 
 
