--- a/index.html
+++ b/index.html
@@ -560,6 +560,10 @@ document.head.appendChild(style);
     position: relative;
 }
 
+.biblioteca-link:hover {
+    color: #e06b8e; /* Colore rosso più chiaro */
+}
+
 .biblioteca-link:hover::before {
     content: "Clicca qui per vedere gli appuntamenti della biblioteca";
     position: absolute;
