--- a/termini.html
+++ b/termini.html
@@ -621,11 +621,21 @@ footer i {
     z-index: 1;
 }
 
-.tooltip-library:hover {
-    color: #d64f70; /* Un rosso più chiaro */
+
+
+
+a {
+    text-decoration: none;
+    color: var(--primary);
+}
+
+a:hover {
+    text-decoration: none;
+    color: #c0c0c0;
 }
 
 
+      
       
    </style>
 </head>
