--- a/termini.html
+++ b/termini.html
@@ -295,16 +295,18 @@
            margin-bottom: 1.7rem; /* Ridotto da 1.8rem */
        }
        
-       a {
-           color: var(--primary);
-           text-decoration: none;
-           border-bottom: 1px solid transparent;
-           transition: border-color 0.3s;
-       }
-       
-       a:hover {
-           border-bottom-color: var(--primary);
-       }
+    a {
+    color: var(--primary);
+    text-decoration: none; /* Rimuove la sottolineatura per tutti i link */
+    border-bottom: none; /* Rimuove eventuali bordi inferiori */
+    transition: color 0.3s ease; /* Transizione per un effetto più fluido */
+}
+
+a:hover {
+    color: #c0c0c0; /* Cambia il colore al passaggio del mouse */
+    text-decoration: none; /* Assicura che non venga sottolineato */
+    border-bottom: none; /* Rimuove eventuali bordi aggiuntivi */
+}
 
 
 
