--- a/termini.html
+++ b/termini.html
@@ -303,8 +303,8 @@
 }
 
 a:hover {
-    color: #c0c0c0; /* Cambia il colore al passaggio del mouse */
-    text-decoration: none; /* Assicura che non venga sottolineato */
+    color: #c0c0c0 !important; /* Cambia il colore al passaggio del mouse */
+    text-decoration: none !important; /* Assicura che non venga sottolineato */
     border-bottom: none; /* Rimuove eventuali bordi aggiuntivi */
 }
 
