--- a/termini.html
+++ b/termini.html
@@ -303,7 +303,7 @@
 }
 
 a:hover {
-    color: #c0c0c0 !important; /* Cambia il colore al passaggio del mouse */
+    color: #e57373 !important; /* Rosso chiaro, Cambia il colore al passaggio del mouse */
     text-decoration: none !important; /* Assicura che non venga sottolineato */
     border-bottom: none; /* Rimuove eventuali bordi aggiuntivi */
 }
