--- a/termini.html
+++ b/termini.html
@@ -309,7 +309,10 @@ a:hover {
 }
 
 
-
+/* Escludi i link all'interno delle icone social */
+.social-icons a:hover {
+    color: var(--primary) !important; /* Mantiene il colore originale */
+}
 
 
 footer {
