--- a/termini.html
+++ b/termini.html
@@ -646,9 +646,10 @@ a:hover {
 </head>
 <body>
    <div class="top-banner">
-        <a href="https://culture.roma.it/" class="tooltip-container">
-            <img src="roma.png" alt="Logo Roma" class="roma-logo">
-        </a>
+        <a href="https://culture.roma.it/" class="tooltip-container" target="_blank" rel="noopener noreferrer">
+    <img src="roma.png" alt="Logo Roma" class="roma-logo">
+</a>
+
         <div class="social-icons">
             <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" aria-label="Facebook" class="tooltip-container">
                 <i class="fab fa-facebook"></i>
