--- a/raccolta.html
+++ b/raccolta.html
@@ -352,9 +352,10 @@ footer a {
 
     <div class="top-banner">
         
-     <a href="https://culture.roma.it/" class="tooltip-container">
-            <img src="roma.png" alt="Logo Roma" class="roma-logo">
-        </a>
+     <a href="https://culture.roma.it/" class="tooltip-container" target="_blank" rel="noopener noreferrer">
+    <img src="roma.png" alt="Logo Roma" class="roma-logo">
+</a>
+
         
         <div class="social-icons">
             <button onclick="window.print()" class="print-button" title="Stampa">
