--- a/raccolta.html
+++ b/raccolta.html
@@ -343,24 +343,26 @@ footer a {
 
 
 
+/* Colore dei collegamenti */
 a {
-    color: var(--primary);
+    color: #D34F6A; /* Colore rosso chiaro per i collegamenti */
     text-decoration: none; /* Rimuove la sottolineatura per tutti i link */
     border-bottom: none; /* Rimuove eventuali bordi inferiori */
     transition: color 0.3s ease; /* Transizione per un effetto più fluido */
 }
 
+/* Colore dei collegamenti al passaggio del mouse */
 a:hover {
-    color: #e57373 !important; /* Rosso chiaro, Cambia il colore al passaggio del mouse */
+    color: #F08B98 !important; /* Colore rosso chiaro più luminoso al passaggio del mouse */
     text-decoration: none !important; /* Assicura che non venga sottolineato */
     border-bottom: none; /* Rimuove eventuali bordi aggiuntivi */
 }
 
-
 /* Escludi i link all'interno delle icone social */
 .social-icons a:hover {
-    color: var(--primary) !important; /* Mantiene il colore originale */
+    color: var(--primary) !important; /* Mantiene il colore originale per le icone social */
 }
+
         
 
 
