--- a/raccolta.html
+++ b/raccolta.html
@@ -343,16 +343,16 @@ footer a {
 
 
 
-/* Colore dei collegamenti */
-a {
+/* Colore dei collegamenti con la classe text-blue-500 */
+a.text-blue-500 {
     color: #D34F6A; /* Colore rosso chiaro per i collegamenti */
     text-decoration: none; /* Rimuove la sottolineatura per tutti i link */
     border-bottom: none; /* Rimuove eventuali bordi inferiori */
     transition: color 0.3s ease; /* Transizione per un effetto più fluido */
 }
 
-/* Colore dei collegamenti al passaggio del mouse */
-a:hover {
+/* Colore dei collegamenti con la classe text-blue-500 al passaggio del mouse */
+a.text-blue-500:hover {
     color: #F08B98 !important; /* Colore rosso chiaro più luminoso al passaggio del mouse */
     text-decoration: none !important; /* Assicura che non venga sottolineato */
     border-bottom: none; /* Rimuove eventuali bordi aggiuntivi */
@@ -362,6 +362,7 @@ a:hover {
 .social-icons a:hover {
     color: var(--primary) !important; /* Mantiene il colore originale per le icone social */
 }
+
 
         
 
