--- a/raccolta.html
+++ b/raccolta.html
@@ -343,16 +343,16 @@ footer a {
 
 
 
-/* Colore dei collegamenti con la classe text-blue-500 */
-a.text-blue-500 {
+/* Colore dei collegamenti */
+a {
     color: #D34F6A; /* Colore rosso chiaro per i collegamenti */
     text-decoration: none; /* Rimuove la sottolineatura per tutti i link */
     border-bottom: none; /* Rimuove eventuali bordi inferiori */
     transition: color 0.3s ease; /* Transizione per un effetto più fluido */
 }
 
-/* Colore dei collegamenti con la classe text-blue-500 al passaggio del mouse */
-a.text-blue-500:hover {
+/* Colore dei collegamenti al passaggio del mouse */
+a:hover {
     color: #F08B98 !important; /* Colore rosso chiaro più luminoso al passaggio del mouse */
     text-decoration: none !important; /* Assicura che non venga sottolineato */
     border-bottom: none; /* Rimuove eventuali bordi aggiuntivi */
@@ -466,7 +466,7 @@ a.text-blue-500:hover {
                 <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
                 <p class="mb-2">
                     <strong>Contatti:</strong> 
-                    <a href="https://www.assistenza-territorio.it/contatti/" class="text-blue-500 hover:underline" target="_blank">Sito Web</a>
+                    <a href="https://www.assistenza-territorio.it/contatti/" hover:underline" target="_blank">Sito Web</a>
                 </p>
                 <p><strong>Email:</strong> info@assistenza-territorio.it</p>
             </div>
@@ -476,7 +476,7 @@ a.text-blue-500:hover {
                 <p class="mb-2">Scopo: Salvare libri dalla spazzatura</p>
                 <p>
                     <strong>Gruppo:</strong> 
-                    <a href="https://www.facebook.com/groups/2486179871416075" class="text-blue-500 hover:underline" target="_blank">Pagina Facebook</a>
+                    <a href="https://www.facebook.com/groups/2486179871416075" hover:underline" target="_blank">Pagina Facebook</a>
                 </p>
             </div>
 
@@ -485,7 +485,7 @@ a.text-blue-500:hover {
                 <p class="mb-2"><strong>Ubicazione:</strong> Acilia, via Macchia Saponara</p>
                 <p>
                     <strong>Contatti:</strong> 
-                    <a href="https://sancarlods.it/pages/index.php" class="text-blue-500 hover:underline" target="_blank">Sito Web</a>
+                    <a href="https://sancarlods.it/pages/index.php" hover:underline" target="_blank">Sito Web</a>
                     <br>
                     <strong>Telefono:</strong> 06-52.12.470
                 </p>
@@ -496,7 +496,7 @@ a.text-blue-500:hover {
                 <p class="mb-2"><strong>Ubicazione:</strong> Casal Palocco, Viale Gorgia di Leontini, 171</p>
                 <p>
                     <strong>Contatti:</strong> 
-                    <a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" class="text-blue-500 hover:underline" target="_blank">Sito Web</a>
+                    <a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" hover:underline" target="_blank">Sito Web</a>
                     <br>
                     <strong>Email:</strong> info@csp-palocco.it
                 </p>
