--- a/raccolta.html
+++ b/raccolta.html
@@ -466,7 +466,7 @@ a:hover {
                 <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
                 <p class="mb-2">
                     <strong>Contatti:</strong> 
-                    <a href="https://www.assistenza-territorio.it/contatti/" hover:underline" target="_blank">Sito Web</a>
+                    <a href="https://www.assistenza-territorio.it/contatti/" title="https://www.assistenza-territorio.it/contatti/" target="_blank">Sito Web</a>
                 </p>
                 <p><strong>Email:</strong> info@assistenza-territorio.it</p>
             </div>
