--- a/raccolta.html
+++ b/raccolta.html
@@ -485,7 +485,7 @@ a:hover {
                 <p class="mb-2"><strong>Ubicazione:</strong> Acilia, via Macchia Saponara</p>
                 <p>
                     <strong>Contatti:</strong> 
-                    <a href="https://sancarlods.it/pages/index.php" hover:underline" target="_blank">Sito Web</a>
+                    <a href="https://sancarlods.it/pages/index.php" title="https://sancarlods.it/pages/index.php" target="_blank">Sito Web</a>
                     <br>
                     <strong>Telefono:</strong> 06-52.12.470
                 </p>
@@ -496,7 +496,7 @@ a:hover {
                 <p class="mb-2"><strong>Ubicazione:</strong> Casal Palocco, Viale Gorgia di Leontini, 171</p>
                 <p>
                     <strong>Contatti:</strong> 
-                    <a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" hover:underline" target="_blank">Sito Web</a>
+                    <a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" title="https://www.csp-palocco.it/chi-siamo/chi-siamo" target="_blank">Sito Web</a>
                     <br>
                     <strong>Email:</strong> info@csp-palocco.it
                 </p>
