--- a/termini.html
+++ b/termini.html
@@ -515,37 +515,33 @@ footer i {
 }
 
 .waveform-container {
-    width: 100%;
-    height: 40px;
-    display: flex;
-    align-items: center;
+    display: none;
+    position: relative;
+    height: 60px;
     background: #f5f5f5;
     border-radius: 4px;
     padding: 10px;
     margin: 10px 0;
     cursor: pointer;
-    position: relative;
 }
 
 .waveform-bars {
     display: flex;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    gap: 2px;
+    align-items: flex-end;
+    height: 40px;
+    gap: 1px;
 }
 
 .waveform-bar {
     flex: 1;
     background: #ddd;
     min-width: 2px;
-    transition: background-color 0.3s ease;
+    transition: height 0.1s ease;
 }
 
 .waveform-bar.played {
     background: #970a2c;
 }
-
 .time-display {
     display: flex;
     justify-content: space-between;
@@ -556,11 +552,10 @@ footer i {
 .progress-line {
     position: absolute;
     top: 0;
-    left: 0;
-    height: 100%;
     width: 2px;
-    background: rgba(151, 10, 44, 0.5);
-    pointer-events: none;
+    height: 100%;
+    background-color: #970a2c;
+    transition: left 0.1s ease;
 }
 
 
