--- a/termini.html
+++ b/termini.html
@@ -529,13 +529,13 @@ footer i {
     display: flex;
     align-items: flex-end;
     height: 40px;
-    gap: 1px;
+    gap: 0.5px;  /* Ridotto da 1px */
 }
 
 .waveform-bar {
     flex: 1;
     background: #ddd;
-    min-width: 2px;
+    min-width: 1px;  /* Ridotto da 2px */
     transition: height 0.1s ease;
 }
 
