--- a/termini.html
+++ b/termini.html
@@ -635,12 +635,10 @@ a:hover {
     .tooltip-container::before,
     .tooltip-container::after,
     .tooltip-library:hover::before,
-    .tooltip,
-    .tooltip * {
+    .tooltip {
         display: none !important;
-        visibility: hidden !important;
     }
-}
+} 
 
       
       
