--- a/raccolta.html
+++ b/raccolta.html
@@ -352,8 +352,20 @@ footer a {
 
  @media (max-width: 768px) {
             body {
-                font-size: 16px;
-            }
+    font-size: 22px; /* Aumenta la dimensione del testo per dispositivi mobili */
+  }
+
+  h1 {
+    font-size: 2rem; /* Aumenta la dimensione dei titoli */
+  }
+
+  h2 {
+    font-size: 1.75rem; /* Aumenta la dimensione dei sottotitoli */
+  }
+
+  p, li {
+    font-size: 1.125rem; /* Aumenta la dimensione del testo nei paragrafi e liste */
+  }
 
             .top-banner {
                 padding: 0.5rem;
