--- a/raccolta.html
+++ b/raccolta.html
@@ -352,19 +352,20 @@ footer a {
 
  @media (max-width: 768px) {
             body {
-    font-size: 22px; /* Aumenta la dimensione del testo per dispositivi mobili */
+    font-size: 24px; /* Aumenta la dimensione del testo per dispositivi mobili */
   }
 
   h1 {
-    font-size: 2rem; /* Aumenta la dimensione dei titoli */
+    font-size: 2.5rem; /* Aumenta la dimensione dei titoli */
   }
 
   h2 {
-    font-size: 1.75rem; /* Aumenta la dimensione dei sottotitoli */
+    font-size: 2rem; /* Aumenta la dimensione dei sottotitoli */
   }
 
   p, li {
     font-size: 1.125rem; /* Aumenta la dimensione del testo nei paragrafi e liste */
+      line-height: 1.6; /* Spaziatura più confortevole */
   }
 
             .top-banner {
@@ -380,7 +381,7 @@ footer a {
             }
 
             .social-icons a {
-                font-size: 1.2rem;
+                font-size: 2rem;
             }
 
             .container-header {
