--- a/raccolta.html
+++ b/raccolta.html
@@ -352,21 +352,8 @@ footer a {
 
  @media (max-width: 768px) {
             body {
-    font-size: 24px; /* Aumenta la dimensione del testo per dispositivi mobili */
-  }
-
-  h1 {
-    font-size: 2.5rem; /* Aumenta la dimensione dei titoli */
-  }
-
-  h2 {
-    font-size: 2rem; /* Aumenta la dimensione dei sottotitoli */
-  }
-
-  p, li {
-    font-size: 1.25rem; /* Aumenta la dimensione del testo nei paragrafi e liste */
-      
-  }
+                font-size: 16px;
+            }
 
             .top-banner {
                 padding: 0.5rem;
@@ -381,7 +368,7 @@ footer a {
             }
 
             .social-icons a {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
             }
 
             .container-header {
