--- a/raccolta.html
+++ b/raccolta.html
@@ -33,11 +33,13 @@
         }
 
 
-
+html {
+  font-size: 22px; /* Dimensione base più grande per tutta la pagina */
+}
         
 body {
     font-family: "Space Grotesk", sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     background-color: #f3f4f6;
     display: flex;
     flex-direction: column;
