--- a/raccolta.html
+++ b/raccolta.html
@@ -334,6 +334,14 @@ footer a {
     }
 }
 
+
+  h1, h2, p {
+        font-weight: 500; /* Peso del font 500 */
+        font-size: 20px; /* Modifica dimensione del font */
+       
+    }
+
+        
 @media (max-width: 1400px) {
     .nav-icons {
         transform: translateX(calc(-50% - 300px));
