--- a/raccolta.html
+++ b/raccolta.html
@@ -520,7 +520,7 @@ a:hover {
     </div>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-                <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
+                <h2 class="text-2xl  mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
                 <p class="mb-2">
                     <strong>Contatti:</strong> 
                     <a href="https://www.assistenza-territorio.it/contatti/" title="https://www.assistenza-territorio.it/contatti/" target="_blank">Sito Web</a>
