--- a/raccolta.html
+++ b/raccolta.html
@@ -55,6 +55,10 @@ footer, footer * {
     font-weight: normal; /* Imposta il peso normale per il testo nel footer */
 }
 
+ p {
+        font-size: 20px; /* Impostato a 20px */
+    }
+        
 .top-banner {
     background-color: white;
     padding: 0.8rem 2rem;
